Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,3 +48,9 @@ stages:
     #     publishWebProjects: true
     #     arguments: '--configuration $(buildConfiguration) -f $(dotNetFramework) --runtime $(targetRuntime) --self-contained -o $(Build.ArtifactStagingDirectory)'
     #     zipAfterPublish: true
+- stage: 'Deploy to dev environment'
+  jobs:
+    - job: DevDeploy
+      
+
+    
