Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,7 @@ stages:
       name: batch26
   
   # Records deployment against bookings resource - Kubernetes namespace.
-  environment: 'Dev'
+ # environment: 'Dev'
   strategy: 
     runOnce:
       deploy:
