Update azure-pipelines1k.yml for Azure Pipelines

--- a/azure-pipelines1k.yml
+++ b/azure-pipelines1k.yml
@@ -44,7 +44,7 @@ stages:
   - deployment: Deploy
     displayName: Deploy to AKS
     pool:
-      name: 'Demo'   
+      name: 'mynewpool'   
     environment: 'Dev'
     strategy:
       runOnce:
